Fix test262 path - gradle task runs from tests/ directory

--- a/.github/workflows/update-compat-table.yml
+++ b/.github/workflows/update-compat-table.yml
@@ -238,7 +238,7 @@ jobs:
           ./gradlew :tests:test262Json \
             -Pengine=rhino-upstream \
             -Poutput=../test262-upstream \
-            -Ptest262path=tests/test262 \
+            -Ptest262path=test262 \
             -Pthreads=4 || true
           echo "Upstream test262 complete"
 
@@ -248,7 +248,7 @@ jobs:
           ./gradlew :tests:test262Json \
             -Pengine=rhino-fork \
             -Poutput=build/test262-fork \
-            -Ptest262path=tests/test262 \
+            -Ptest262path=test262 \
             -Pthreads=4 || true
           echo "Fork test262 complete"
 
