Throw TypeError when calling class constructor without 'new'
ES6 class constructors cannot be invoked as regular functions - they
must be called with 'new'. This commit implements that check for both
compiled and interpreted modes.

Changes:
- Add isClassConstructor field to ScriptNode with getter/setter
- Set isClassConstructor flag in IRFactory when processing class definitions
- Propagate flag through CodeGenUtils to JSDescriptor
- Check flag in JSFunction.call() to throw TypeError
- Add same check in Interpreter for interpreted class constructors
- Fix derived class constructor return value for top-level interpreter calls

5 test262 tests now pass completely.

--- a/tests/testsrc/test262.properties
+++ b/tests/testsrc/test262.properties
@@ -6648,10 +6648,9 @@ language/statements/block 7/21 (33.33%)
 
 language/statements/break 0/20 (0.0%)
 
-language/statements/class 3591/4366 (82.25%)
+language/statements/class 3586/4366 (82.13%)
     accessor-name-inst 21/21 (100.0%)
     accessor-name-static 21/21 (100.0%)
-    arguments/default-constructor.js
     async-gen-method-static 94/94 (100.0%)
     async-gen-method-static/forbidden-ext/b1 2/2 (100.0%)
     async-gen-method-static/forbidden-ext/b2 3/3 (100.0%)
@@ -6727,11 +6726,10 @@ language/statements/class 3591/4366 (82.25%)
     definition/methods-gen-yield-star-before-newline.js
     definition/methods-restricted-properties.js non-strict {interpreted-strict,non-strict}
     definition/numeric-property-names.js
-    definition/prototype-wiring.js
     definition/setters-non-configurable-err.js
     definition/setters-prop-desc.js
     definition/this-access-restriction.js
-    definition/this-access-restriction-2.js
+    definition/this-access-restriction-2.js compiled
     definition/this-check-ordering.js
     dstr/async-gen-meth-ary-init-iter-close.js {unsupported: [async-iteration, async]}
     dstr/async-gen-meth-ary-init-iter-get-err.js {unsupported: [async-iteration]}
@@ -8298,11 +8296,8 @@ language/statements/class 3591/4366 (82.25%)
     subclass/builtin-objects/ArrayBuffer/regular-subclassing.js
     subclass/builtin-objects/GeneratorFunction/instance-prototype.js
     subclass/builtin-objects/Proxy/no-prototype-throws.js
-    subclass/binding.js
     subclass/class-definition-null-proto.js
     subclass/class-definition-null-proto-this.js
-    subclass/default-constructor.js
-    subclass/default-constructor-2.js
     subclass/derived-class-return-override-catch.js interpreted
     subclass/derived-class-return-override-catch-finally-arrow.js
     subclass/derived-class-return-override-catch-super.js interpreted
