Update test262.properties after getter/setter pair fix
- language/expressions/class: 66.2% → 65.9% failing (12 tests fixed)
- language/statements/class: 63.88% → 63.61% failing (12 tests fixed)

Private accessor pairs (get #foo / set #foo) now work correctly.

--- a/tests/testsrc/test262.properties
+++ b/tests/testsrc/test262.properties
@@ -3311,7 +3311,7 @@ language/expressions/call 7/92 (7.61%)
     tco-non-eval-global.js {unsupported: [tail-call-optimization]}
     tco-non-eval-with.js {unsupported: [tail-call-optimization]}
 
-language/expressions/class 2687/4059 (66.2%)
+language/expressions/class 2675/4059 (65.9%)
     async-gen-method-static 94/94 (100.0%)
     async-gen-method-static/forbidden-ext/b1 2/2 (100.0%)
     async-gen-method-static/forbidden-ext/b2 3/3 (100.0%)
@@ -4575,7 +4575,14 @@ language/expressions/class 2687/4059 (66.2%)
     elements/evaluation-error/computed-name-valueof-err.js compiled
     elements/gen-private-method-static/yield-spread-obj.js compiled
     elements/gen-private-method/yield-spread-obj.js compiled
-    elements/private-accessor-name 20/20 (100.0%)
+    elements/private-accessor-name/inst-private-escape-sequence-u2118.js
+    elements/private-accessor-name/inst-private-escape-sequence-ZWJ.js
+    elements/private-accessor-name/inst-private-escape-sequence-ZWNJ.js
+    elements/private-accessor-name/inst-private-name-u2118.js
+    elements/private-accessor-name/static-private-escape-sequence-u2118.js
+    elements/private-accessor-name/static-private-escape-sequence-ZWJ.js
+    elements/private-accessor-name/static-private-escape-sequence-ZWNJ.js
+    elements/private-accessor-name/static-private-name-u2118.js
     elements/private-methods 5/5 (100.0%)
     elements/syntax/early-errors/delete 96/96 (100.0%)
     elements/syntax/early-errors/invalid-names 28/28 (100.0%)
@@ -6852,7 +6859,7 @@ language/statements/block 7/21 (33.33%)
 
 language/statements/break 0/20 (0.0%)
 
-language/statements/class 2789/4366 (63.88%)
+language/statements/class 2777/4366 (63.61%)
     async-gen-method-static 94/94 (100.0%)
     async-gen-method-static/forbidden-ext/b1 2/2 (100.0%)
     async-gen-method-static/forbidden-ext/b2 3/3 (100.0%)
@@ -8134,7 +8141,14 @@ language/statements/class 2789/4366 (63.88%)
     elements/evaluation-error/computed-name-valueof-err.js compiled
     elements/gen-private-method-static/yield-spread-obj.js compiled
     elements/gen-private-method/yield-spread-obj.js compiled
-    elements/private-accessor-name 20/20 (100.0%)
+    elements/private-accessor-name/inst-private-escape-sequence-u2118.js
+    elements/private-accessor-name/inst-private-escape-sequence-ZWJ.js
+    elements/private-accessor-name/inst-private-escape-sequence-ZWNJ.js
+    elements/private-accessor-name/inst-private-name-u2118.js
+    elements/private-accessor-name/static-private-escape-sequence-u2118.js
+    elements/private-accessor-name/static-private-escape-sequence-ZWJ.js
+    elements/private-accessor-name/static-private-escape-sequence-ZWNJ.js
+    elements/private-accessor-name/static-private-name-u2118.js
     elements/private-methods 5/5 (100.0%)
     elements/syntax/early-errors/delete 96/96 (100.0%)
     elements/syntax/early-errors/invalid-names 28/28 (100.0%)
