Update test262.properties after private method name fix
- language/expressions/class: 65.9% → 65.73% failing (7 tests fixed)
- language/statements/class: 63.61% → 63.44% failing (7 tests fixed)

Private method name tests now pass:
- private-generator-method-name.js
- private-static-generator-method-name.js
- private-static-method-name.js
- prod-private-method.js
- prod-private-generator.js

--- a/tests/testsrc/test262.properties
+++ b/tests/testsrc/test262.properties
@@ -3311,7 +3311,7 @@ language/expressions/call 7/92 (7.61%)
     tco-non-eval-global.js {unsupported: [tail-call-optimization]}
     tco-non-eval-with.js {unsupported: [tail-call-optimization]}
 
-language/expressions/class 2675/4059 (65.9%)
+language/expressions/class 2668/4059 (65.73%)
     async-gen-method-static 94/94 (100.0%)
     async-gen-method-static/forbidden-ext/b1 2/2 (100.0%)
     async-gen-method-static/forbidden-ext/b2 3/3 (100.0%)
@@ -4583,7 +4583,9 @@ language/expressions/class 2675/4059 (65.9%)
     elements/private-accessor-name/static-private-escape-sequence-ZWJ.js
     elements/private-accessor-name/static-private-escape-sequence-ZWNJ.js
     elements/private-accessor-name/static-private-name-u2118.js
-    elements/private-methods 5/5 (100.0%)
+    elements/private-methods/prod-private-async-generator.js {unsupported: [async-iteration, async]}
+    elements/private-methods/prod-private-async-method.js {unsupported: [async-functions, async]}
+    elements/private-methods/prod-private-method-initialize-order.js
     elements/syntax/early-errors/delete 96/96 (100.0%)
     elements/syntax/early-errors/invalid-names 28/28 (100.0%)
     elements/syntax/early-errors/grammar-class-body-ctor-duplicate.js
@@ -5072,8 +5074,6 @@ language/expressions/class 2675/4059 (65.9%)
     elements/new-sc-line-method-rs-static-privatename-identifier-initializer-alt-by-classname.js
     elements/new-sc-line-method-static-private-methods-with-fields.js
     elements/private-arrow-fnc-init-err-contains-arguments.js
-    elements/private-async-generator-method-name.js
-    elements/private-async-method-name.js
     elements/private-derived-cls-direct-eval-contains-superproperty-1.js
     elements/private-derived-cls-direct-eval-contains-superproperty-2.js
     elements/private-direct-eval-err-contains-arguments.js
@@ -5082,7 +5082,6 @@ language/expressions/class 2675/4059 (65.9%)
     elements/private-field-as-async-arrow-function.js {unsupported: [async-functions, async]}
     elements/private-field-as-async-function.js {unsupported: [async-functions, async]}
     elements/private-field-on-nested-class.js
-    elements/private-generator-method-name.js
     elements/private-getter-on-nested-class.js
     elements/private-indirect-eval-err-contains-newtarget.js {unsupported: [new.target]}
     elements/private-literal-name-init-err-contains-arguments.js
@@ -5092,8 +5091,6 @@ language/expressions/class 2675/4059 (65.9%)
     elements/private-static-async-method-name.js
     elements/private-static-field-shadowed-by-method-on-nested-class.js
     elements/private-static-field-usage-inside-nested-class.js
-    elements/private-static-generator-method-name.js
-    elements/private-static-method-name.js
     elements/private-static-method-usage-inside-nested-class.js
     elements/private-ternary-init-err-contains-arguments.js
     elements/private-typeof-init-err-contains-arguments.js
@@ -6859,7 +6856,7 @@ language/statements/block 7/21 (33.33%)
 
 language/statements/break 0/20 (0.0%)
 
-language/statements/class 2777/4366 (63.61%)
+language/statements/class 2770/4366 (63.44%)
     async-gen-method-static 94/94 (100.0%)
     async-gen-method-static/forbidden-ext/b1 2/2 (100.0%)
     async-gen-method-static/forbidden-ext/b2 3/3 (100.0%)
@@ -8149,7 +8146,9 @@ language/statements/class 2777/4366 (63.61%)
     elements/private-accessor-name/static-private-escape-sequence-ZWJ.js
     elements/private-accessor-name/static-private-escape-sequence-ZWNJ.js
     elements/private-accessor-name/static-private-name-u2118.js
-    elements/private-methods 5/5 (100.0%)
+    elements/private-methods/prod-private-async-generator.js {unsupported: [async-iteration, async]}
+    elements/private-methods/prod-private-async-method.js {unsupported: [async-functions, async]}
+    elements/private-methods/prod-private-method-initialize-order.js
     elements/syntax/early-errors/delete 96/96 (100.0%)
     elements/syntax/early-errors/invalid-names 28/28 (100.0%)
     elements/syntax/early-errors/grammar-class-body-ctor-duplicate.js
@@ -8638,8 +8637,6 @@ language/statements/class 2777/4366 (63.61%)
     elements/new-sc-line-method-rs-static-privatename-identifier-initializer-alt-by-classname.js
     elements/new-sc-line-method-static-private-methods-with-fields.js
     elements/private-arrow-fnc-init-err-contains-arguments.js
-    elements/private-async-generator-method-name.js
-    elements/private-async-method-name.js
     elements/private-derived-cls-direct-eval-contains-superproperty-1.js
     elements/private-derived-cls-direct-eval-contains-superproperty-2.js
     elements/private-direct-eval-err-contains-arguments.js
@@ -8651,7 +8648,6 @@ language/statements/class 2777/4366 (63.61%)
     elements/private-field-on-nested-class.js
     elements/private-field-visible-to-direct-eval.js
     elements/private-field-visible-to-direct-eval-on-initializer.js
-    elements/private-generator-method-name.js
     elements/private-getter-on-nested-class.js
     elements/private-getter-visible-to-direct-eval.js
     elements/private-getter-visible-to-direct-eval-on-initializer.js
@@ -8672,9 +8668,7 @@ language/statements/class 2777/4366 (63.61%)
     elements/private-static-field-shadowed-by-method-on-nested-class.js
     elements/private-static-field-usage-inside-nested-class.js
     elements/private-static-field-visible-to-direct-eval.js
-    elements/private-static-generator-method-name.js
     elements/private-static-getter-visible-to-direct-eval.js
-    elements/private-static-method-name.js
     elements/private-static-method-usage-inside-nested-class.js
     elements/private-static-method-visible-to-direct-eval.js
     elements/private-static-setter-visible-to-direct-eval.js
