Fix ES6 yield identifier handling and labeled function declarations
This commit addresses several ES6 conformance issues:

1. Function declarations as labeled statement body in strict mode
   - Per ES6, function declarations cannot be the body of a labeled
     statement in strict mode. Added error check in Parser.nameOrLabel().

2. yield as identifier in non-strict mode outside generators
   - Per ES6, yield is only a keyword inside generator functions.
   - In non-strict mode outside generators, yield is a valid identifier.
   - Modified TokenStream to demote YIELD to NAME when not in strict
     mode and not inside a generator function (body or parameters).

3. yield as class name
   - Per ES6 10.2.1, class definitions are always strict mode code.
   - yield cannot be used as a class name since it's reserved in
     strict mode. Added check in Parser.classDeclaration().

4. yield as generator function name
   - Generator functions cannot be named "yield" since yield is a
     keyword inside generator function bodies. Added check in
     Parser.function().

These changes fix 46+ test262 tests related to yield identifier handling
and labeled statement validation.

--- a/tests/testsrc/test262.properties
+++ b/tests/testsrc/test262.properties
@@ -2946,7 +2946,7 @@ language/expressions/addition 0/48 (0.0%)
 
 language/expressions/array 0/52 (0.0%)
 
-language/expressions/arrow-function 61/343 (17.78%)
+language/expressions/arrow-function 58/343 (16.91%)
     dstr/ary-ptrn-elem-id-init-fn-name-arrow.js
     dstr/ary-ptrn-elem-id-init-fn-name-class.js
     dstr/ary-ptrn-elem-id-init-fn-name-cover.js
@@ -2987,8 +2987,6 @@ language/expressions/arrow-function 61/343 (17.78%)
     dstr/obj-ptrn-rest-getter.js {unsupported: [object-rest]}
     dstr/obj-ptrn-rest-skip-non-enumerable.js {unsupported: [object-rest]}
     dstr/obj-ptrn-rest-val-obj.js {unsupported: [object-rest]}
-    syntax/arrowparameters-bindingidentifier-yield.js non-strict
-    syntax/arrowparameters-cover-formalparameters-yield.js non-strict
     syntax/arrowparameters-cover-includes-rest-concisebody-functionbody.js
     syntax/arrowparameters-cover-initialize-2.js
     syntax/arrowparameters-cover-rest-concisebody-functionbody.js
@@ -3001,7 +2999,6 @@ language/expressions/arrow-function 61/343 (17.78%)
     lexical-super-call-from-within-constructor.js
     lexical-supercall-from-immediately-invoked-arrow.js
     param-dflt-yield-expr.js
-    param-dflt-yield-id-non-strict.js non-strict
     scope-body-lex-distinct.js non-strict
     scope-param-rest-elem-var-close.js non-strict
     scope-param-rest-elem-var-open.js non-strict
@@ -3009,7 +3006,7 @@ language/expressions/arrow-function 61/343 (17.78%)
     unscopables-with.js non-strict
     unscopables-with-in-nested-fn.js non-strict
 
-language/expressions/assignment 145/485 (29.9%)
+language/expressions/assignment 135/485 (27.84%)
     destructuring/default-expr-throws-iterator-return-get-throws.js
     destructuring/iterator-destructuring-property-reference-target-evaluation-order.js
     destructuring/keyed-destructuring-property-reference-target-evaluation-order.js
@@ -3022,7 +3019,6 @@ language/expressions/assignment 145/485 (29.9%)
     dstr/array-elem-init-fn-name-fn.js
     dstr/array-elem-init-fn-name-gen.js
     dstr/array-elem-init-simple-no-strict.js non-strict
-    dstr/array-elem-init-yield-ident-valid.js non-strict
     dstr/array-elem-iter-get-err.js
     dstr/array-elem-iter-nrml-close.js
     dstr/array-elem-iter-nrml-close-err.js
@@ -3034,13 +3030,11 @@ language/expressions/assignment 145/485 (29.9%)
     dstr/array-elem-iter-thrw-close.js
     dstr/array-elem-iter-thrw-close-err.js
     dstr/array-elem-iter-thrw-close-skip.js
-    dstr/array-elem-nested-array-yield-ident-valid.js non-strict
     dstr/array-elem-nested-obj-yield-expr.js
     dstr/array-elem-nested-obj-yield-ident-valid.js non-strict
     dstr/array-elem-put-obj-literal-prop-ref-init.js
     dstr/array-elem-put-obj-literal-prop-ref-init-active.js
     dstr/array-elem-target-simple-strict.js strict
-    dstr/array-elem-target-yield-valid.js non-strict
     dstr/array-elem-trlg-iter-elision-iter-abpt.js
     dstr/array-elem-trlg-iter-elision-iter-nrml-close.js
     dstr/array-elem-trlg-iter-elision-iter-nrml-close-err.js
@@ -3098,31 +3092,24 @@ language/expressions/assignment 145/485 (29.9%)
     dstr/array-rest-lref.js
     dstr/array-rest-lref-err.js
     dstr/array-rest-nested-array-iter-thrw-close-skip.js
-    dstr/array-rest-nested-array-yield-ident-valid.js non-strict
     dstr/array-rest-nested-obj-yield-expr.js
     dstr/array-rest-nested-obj-yield-ident-valid.js non-strict
     dstr/array-rest-put-prop-ref-user-err-iter-close-skip.js
-    dstr/array-rest-yield-ident-valid.js non-strict
-    dstr/obj-id-identifier-yield-ident-valid.js non-strict
     dstr/obj-id-init-fn-name-arrow.js
     dstr/obj-id-init-fn-name-class.js
     dstr/obj-id-init-fn-name-cover.js
     dstr/obj-id-init-fn-name-fn.js
     dstr/obj-id-init-fn-name-gen.js
     dstr/obj-id-init-simple-no-strict.js non-strict
-    dstr/obj-id-init-yield-ident-valid.js non-strict
     dstr/obj-prop-elem-init-fn-name-arrow.js
     dstr/obj-prop-elem-init-fn-name-class.js
     dstr/obj-prop-elem-init-fn-name-cover.js
     dstr/obj-prop-elem-init-fn-name-fn.js
     dstr/obj-prop-elem-init-fn-name-gen.js
-    dstr/obj-prop-elem-init-yield-ident-valid.js non-strict
     dstr/obj-prop-elem-target-obj-literal-prop-ref-init.js
     dstr/obj-prop-elem-target-obj-literal-prop-ref-init-active.js
-    dstr/obj-prop-elem-target-yield-ident-valid.js non-strict
     dstr/obj-prop-name-evaluation.js
     dstr/obj-prop-name-evaluation-error.js
-    dstr/obj-prop-nested-array-yield-ident-valid.js non-strict
     dstr/obj-prop-nested-obj-yield-expr.js
     dstr/obj-prop-nested-obj-yield-ident-valid.js non-strict
     dstr/obj-rest-computed-property.js {unsupported: [object-rest]}
@@ -3156,7 +3143,7 @@ language/expressions/assignment 145/485 (29.9%)
     target-cover-newtarget.js {unsupported: [new.target]}
     target-newtarget.js {unsupported: [new.target]}
 
-language/expressions/assignmenttargettype 24/324 (7.41%)
+language/expressions/assignmenttargettype 23/324 (7.1%)
     direct-arrowfunction-1.js
     direct-callexpression.js strict
     direct-callexpression-as-for-in-lhs.js strict
@@ -3180,7 +3167,6 @@ language/expressions/assignmenttargettype 24/324 (7.41%)
     parenthesized-memberexpression-templateliteral.js
     parenthesized-optionalexpression.js
     parenthesized-primaryexpression-objectliteral.js
-    simple-basic-identifierreference-yield.js non-strict
 
 language/expressions/async-arrow-function 42/60 (70.0%)
     forbidden-ext/b1 2/2 (100.0%)
@@ -5276,7 +5262,7 @@ language/expressions/equals 0/47 (0.0%)
 
 language/expressions/exponentiation 0/44 (0.0%)
 
-language/expressions/function 63/264 (23.86%)
+language/expressions/function 62/264 (23.48%)
     dstr/ary-ptrn-elem-id-init-fn-name-arrow.js
     dstr/ary-ptrn-elem-id-init-fn-name-class.js
     dstr/ary-ptrn-elem-id-init-fn-name-cover.js
@@ -5326,7 +5312,6 @@ language/expressions/function 63/264 (23.86%)
     named-strict-error-reassign-fn-name-in-body.js strict
     named-strict-error-reassign-fn-name-in-body-in-arrow.js strict
     named-strict-error-reassign-fn-name-in-body-in-eval.js strict
-    param-dflt-yield-non-strict.js non-strict
     param-dflt-yield-strict.js strict
     params-dflt-ref-arguments.js
     scope-body-lex-distinct.js non-strict
@@ -5338,7 +5323,7 @@ language/expressions/function 63/264 (23.86%)
     unscopables-with.js non-strict
     unscopables-with-in-nested-fn.js non-strict
 
-language/expressions/generators 111/290 (38.28%)
+language/expressions/generators 108/290 (37.24%)
     dstr/ary-init-iter-get-err.js
     dstr/ary-init-iter-get-err-array-prototype.js
     dstr/ary-ptrn-elem-ary-val-null.js
@@ -5431,8 +5416,7 @@ language/expressions/generators 111/290 (38.28%)
     named-strict-error-reassign-fn-name-in-body.js strict
     named-strict-error-reassign-fn-name-in-body-in-arrow.js strict
     named-strict-error-reassign-fn-name-in-body-in-eval.js strict
-    named-yield-identifier-non-strict.js non-strict
-    named-yield-identifier-spread-non-strict.js non-strict
+    named-yield-identifier-spread-non-strict.js compiled-non-strict
     named-yield-spread-obj.js compiled
     prototype-own-properties.js
     scope-body-lex-distinct.js non-strict
@@ -5444,9 +5428,7 @@ language/expressions/generators 111/290 (38.28%)
     unscopables-with.js non-strict
     unscopables-with-in-nested-fn.js non-strict
     yield-as-function-expression-binding-identifier.js non-strict
-    yield-as-identifier-in-nested-function.js non-strict
-    yield-identifier-non-strict.js non-strict
-    yield-identifier-spread-non-strict.js non-strict
+    yield-identifier-spread-non-strict.js compiled-non-strict
     yield-spread-obj.js compiled
     yield-star-after-newline.js
     yield-star-before-newline.js
@@ -5459,7 +5441,7 @@ language/expressions/grouping 0/9 (0.0%)
 
 ~language/expressions/import.meta 22/22 (100.0%)
 
-language/expressions/in 12/36 (33.33%)
+language/expressions/in 11/36 (30.56%)
     private-field-presence-accessor.js
     private-field-presence-accessor-shadowed.js
     private-field-presence-field.js
@@ -5471,7 +5453,6 @@ language/expressions/in 12/36 (33.33%)
     private-field-rhs-non-object.js
     private-field-rhs-unresolvable.js
     private-field-rhs-yield-present.js
-    rhs-yield-absent-non-strict.js non-strict
 
 language/expressions/instanceof 0/43 (0.0%)
 
@@ -5528,7 +5509,7 @@ language/expressions/new 0/59 (0.0%)
 
 ~language/expressions/new.target 14/14 (100.0%)
 
-language/expressions/object 532/1170 (45.47%)
+language/expressions/object 521/1170 (44.53%)
     dstr/async-gen-meth-ary-init-iter-close.js {unsupported: [async-iteration, async]}
     dstr/async-gen-meth-ary-init-iter-get-err.js {unsupported: [async-iteration]}
     dstr/async-gen-meth-ary-init-iter-get-err-array-prototype.js {unsupported: [async-iteration]}
@@ -5994,23 +5975,16 @@ language/expressions/object 532/1170 (45.47%)
     method-definition/gen-meth-dflt-params-ref-later.js
     method-definition/gen-meth-dflt-params-ref-self.js
     method-definition/gen-meth-eval-var-scope-syntax-err.js non-strict
-    method-definition/gen-yield-identifier-non-strict.js non-strict
-    method-definition/gen-yield-identifier-spread-non-strict.js non-strict
+    method-definition/gen-yield-identifier-spread-non-strict.js compiled-non-strict
     method-definition/gen-yield-spread-obj.js compiled
     method-definition/generator-param-init-yield.js non-strict
     method-definition/generator-param-redecl-let.js
-    method-definition/generator-prop-name-yield-expr.js non-strict
-    method-definition/generator-prop-name-yield-id.js non-strict
     method-definition/generator-prototype-prop.js
     method-definition/meth-dflt-params-duplicates.js non-strict
     method-definition/meth-dflt-params-ref-later.js
     method-definition/meth-dflt-params-ref-self.js
     method-definition/meth-eval-var-scope-syntax-err.js non-strict
-    method-definition/name-param-id-yield.js non-strict
-    method-definition/name-param-init-yield.js non-strict
     method-definition/name-param-redecl.js
-    method-definition/name-prop-name-yield-expr.js non-strict
-    method-definition/name-prop-name-yield-id.js non-strict
     method-definition/object-method-returns-promise.js {unsupported: [async-functions]}
     method-definition/params-dflt-meth-ref-arguments.js
     method-definition/private-name-early-error-async-fn.js {unsupported: [async-functions]}
@@ -6026,7 +6000,6 @@ language/expressions/object 532/1170 (45.47%)
     method-definition/static-init-await-reference-generator.js
     method-definition/static-init-await-reference-normal.js
     method-definition/yield-as-function-expression-binding-identifier.js non-strict
-    method-definition/yield-as-identifier-in-nested-function.js non-strict
     method-definition/yield-star-after-newline.js
     method-definition/yield-star-before-newline.js
     __proto__-duplicate.js
@@ -6034,7 +6007,6 @@ language/expressions/object 532/1170 (45.47%)
     __proto__-permitted-dup.js {unsupported: [async-iteration, async-functions]}
     __proto__-permitted-dup-shorthand.js
     accessor-name-computed-in.js
-    accessor-name-computed-yield-id.js non-strict
     computed-__proto__.js
     cpn-obj-lit-computed-property-name-from-async-arrow-function-expression.js
     cpn-obj-lit-computed-property-name-from-await-expression.js {unsupported: [module, async]}
@@ -6059,8 +6031,6 @@ language/expressions/object 532/1170 (45.47%)
     scope-setter-body-lex-distinc.js non-strict
     scope-setter-paramsbody-var-open.js
     setter-body-strict-inside.js non-strict
-    yield-non-strict-access.js non-strict
-    yield-non-strict-syntax.js non-strict
 
 language/expressions/optional-chaining 13/38 (34.21%)
     early-errors-tail-position-null-optchain-template-string.js
@@ -6239,7 +6209,7 @@ language/function-code 84/217 (38.71%)
 
 language/future-reserved-words 0/55 (0.0%)
 
-language/global-code 24/42 (57.14%)
+language/global-code 23/42 (54.76%)
     block-decl-strict.js strict
     decl-lex.js
     decl-lex-configurable-global.js
@@ -6263,7 +6233,6 @@ language/global-code 24/42 (57.14%)
     script-decl-var-err.js non-strict
     switch-case-decl-strict.js strict
     switch-dflt-decl-strict.js strict
-    yield-non-strict.js non-strict
 
 language/identifier-resolution 0/14 (0.0%)
 
@@ -8605,7 +8574,7 @@ language/statements/for-in 25/115 (21.74%)
     scope-head-lex-close.js
     scope-head-var-none.js non-strict
 
-language/statements/for-of 278/751 (37.02%)
+language/statements/for-of 269/751 (35.82%)
     dstr/array-elem-init-evaluation.js
     dstr/array-elem-init-fn-name-arrow.js
     dstr/array-elem-init-fn-name-class.js
@@ -8614,7 +8583,6 @@ language/statements/for-of 278/751 (37.02%)
     dstr/array-elem-init-fn-name-gen.js
     dstr/array-elem-init-in.js
     dstr/array-elem-init-simple-no-strict.js non-strict
-    dstr/array-elem-init-yield-ident-valid.js non-strict
     dstr/array-elem-iter-get-err.js
     dstr/array-elem-iter-nrml-close.js
     dstr/array-elem-iter-nrml-close-err.js
@@ -8626,13 +8594,11 @@ language/statements/for-of 278/751 (37.02%)
     dstr/array-elem-iter-thrw-close.js
     dstr/array-elem-iter-thrw-close-err.js
     dstr/array-elem-iter-thrw-close-skip.js
-    dstr/array-elem-nested-array-yield-ident-valid.js non-strict
     dstr/array-elem-nested-obj-yield-expr.js
     dstr/array-elem-nested-obj-yield-ident-valid.js non-strict
     dstr/array-elem-put-obj-literal-prop-ref-init.js
     dstr/array-elem-put-obj-literal-prop-ref-init-active.js
     dstr/array-elem-target-simple-strict.js strict
-    dstr/array-elem-target-yield-valid.js non-strict
     dstr/array-elem-trlg-iter-elision-iter-abpt.js
     dstr/array-elem-trlg-iter-elision-iter-nrml-close.js
     dstr/array-elem-trlg-iter-elision-iter-nrml-close-err.js
@@ -8690,11 +8656,9 @@ language/statements/for-of 278/751 (37.02%)
     dstr/array-rest-lref.js
     dstr/array-rest-lref-err.js
     dstr/array-rest-nested-array-iter-thrw-close-skip.js
-    dstr/array-rest-nested-array-yield-ident-valid.js non-strict
     dstr/array-rest-nested-obj-yield-expr.js
     dstr/array-rest-nested-obj-yield-ident-valid.js non-strict
     dstr/array-rest-put-prop-ref-user-err-iter-close-skip.js
-    dstr/array-rest-yield-ident-valid.js non-strict
     dstr/const-ary-init-iter-close.js
     dstr/const-ary-init-iter-get-err.js
     dstr/const-ary-ptrn-elem-ary-elision-init.js
@@ -8753,7 +8717,6 @@ language/statements/for-of 278/751 (37.02%)
     dstr/let-obj-ptrn-rest-getter.js {unsupported: [object-rest]}
     dstr/let-obj-ptrn-rest-skip-non-enumerable.js {unsupported: [object-rest]}
     dstr/let-obj-ptrn-rest-val-obj.js {unsupported: [object-rest]}
-    dstr/obj-id-identifier-yield-ident-valid.js non-strict
     dstr/obj-id-init-assignment-missing.js
     dstr/obj-id-init-assignment-null.js
     dstr/obj-id-init-assignment-truthy.js
@@ -8776,13 +8739,10 @@ language/statements/for-of 278/751 (37.02%)
     dstr/obj-prop-elem-init-fn-name-fn.js
     dstr/obj-prop-elem-init-fn-name-gen.js
     dstr/obj-prop-elem-init-in.js
-    dstr/obj-prop-elem-init-yield-ident-valid.js non-strict
     dstr/obj-prop-elem-target-obj-literal-prop-ref-init.js
     dstr/obj-prop-elem-target-obj-literal-prop-ref-init-active.js
-    dstr/obj-prop-elem-target-yield-ident-valid.js non-strict
     dstr/obj-prop-name-evaluation.js
     dstr/obj-prop-name-evaluation-error.js
-    dstr/obj-prop-nested-array-yield-ident-valid.js non-strict
     dstr/obj-prop-nested-obj-yield-expr.js
     dstr/obj-prop-nested-obj-yield-ident-valid.js non-strict
     dstr/obj-rest-computed-property.js {unsupported: [object-rest]}
@@ -8885,7 +8845,7 @@ language/statements/for-of 278/751 (37.02%)
     typedarray-backed-by-resizable-buffer-shrink-mid-iteration.js {unsupported: [resizable-arraybuffer]}
     typedarray-backed-by-resizable-buffer-shrink-to-zero-mid-iteration.js {unsupported: [resizable-arraybuffer]}
 
-language/statements/function 56/451 (12.42%)
+language/statements/function 55/451 (12.2%)
     dstr/ary-ptrn-elem-id-init-fn-name-arrow.js
     dstr/ary-ptrn-elem-id-init-fn-name-class.js
     dstr/ary-ptrn-elem-id-init-fn-name-cover.js
@@ -8931,7 +8891,6 @@ language/statements/function 56/451 (12.42%)
     dflt-params-ref-later.js
     dflt-params-ref-self.js
     eval-var-scope-syntax-err.js non-strict
-    param-dflt-yield-non-strict.js non-strict
     param-dflt-yield-strict.js strict
     params-dflt-ref-arguments.js
     scope-body-lex-distinct.js non-strict
@@ -8940,7 +8899,7 @@ language/statements/function 56/451 (12.42%)
     unscopables-with.js non-strict
     unscopables-with-in-nested-fn.js non-strict
 
-language/statements/generators 99/266 (37.22%)
+language/statements/generators 97/266 (36.47%)
     dstr/ary-init-iter-get-err.js
     dstr/ary-init-iter-get-err-array-prototype.js
     dstr/ary-ptrn-elem-ary-val-null.js
@@ -9034,9 +8993,7 @@ language/statements/generators 99/266 (37.22%)
     unscopables-with-in-nested-fn.js non-strict
     yield-as-function-expression-binding-identifier.js non-strict
     yield-as-generator-declaration-binding-identifier.js non-strict
-    yield-as-identifier-in-nested-function.js non-strict
-    yield-identifier-non-strict.js non-strict
-    yield-identifier-spread-non-strict.js non-strict
+    yield-identifier-spread-non-strict.js compiled-non-strict
     yield-spread-obj.js compiled
     yield-star-after-newline.js
     yield-star-before-newline.js
@@ -9068,15 +9025,12 @@ language/statements/if 25/69 (36.23%)
     tco-else-body.js {unsupported: [tail-call-optimization]}
     tco-if-body.js {unsupported: [tail-call-optimization]}
 
-language/statements/labeled 8/24 (33.33%)
+language/statements/labeled 5/24 (20.83%)
     decl-async-function.js {unsupported: [async-functions]}
     decl-async-generator.js {unsupported: [async-iteration]}
-    decl-fun-strict.js strict
     tco.js {unsupported: [tail-call-optimization]}
     value-await-module.js {unsupported: [module]}
     value-await-module-escaped.js {unsupported: [module]}
-    value-yield-non-strict.js non-strict
-    value-yield-non-strict-escaped.js non-strict
 
 language/statements/let 29/145 (20.0%)
     dstr/ary-init-iter-close.js
